Removed render blocking js and css from the head.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
       {{ content }}
     </div>
     {% include footer.html %}
-    {% include analytics.html %}
-    {% include zopim.html %}
+    {% include css.html %}
+    {% include javascript.html %}
   </body>
 </html>
