--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,25 +8,116 @@
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet"
-    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
-    integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ=="
-    crossorigin="anonymous">
-
-  <!-- Optional theme -->
-  <link rel="stylesheet"
-    href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.5/yeti/bootstrap.min.css">
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-
-  <!-- Latest compiled and minified JavaScript -->
-
-  <script
-    src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">
-  </script>
-
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"
-    integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ=="
-    crossorigin="anonymous"
-    async="async"></script>
+  <style>
+    html { font-family: sans-serif; font-size: 10px; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+    body { margin: 0px; font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 15px; line-height: 1.4; color: rgb(34, 34, 34); background-color: rgb(255, 255, 255); margin-top: 75px; }
+    .home { text-align: center; }
+    a { background-color: transparent; color: rgb(0, 140, 186); text-decoration: none; }
+    article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary { display: block; }
+    .navbar { position: relative; min-height: 45px; margin-bottom: 21px; border: none; border-radius: 0px; font-size: 13px; font-weight: 300; background-color: rgb(153, 0, 0); }
+    .navbar-fixed-bottom, .navbar-fixed-top { position: fixed; right: 0px; left: 0px; z-index: 1030; border-radius: 0px; }
+    .navbar-fixed-top { top: 0px; border-width: 0px 0px 1px; }
+    .navbar-inverse { border-color: rgb(0, 102, 135); background-color: rgb(0, 140, 186); }
+    .navbar-fixed-top, .navbar-fixed-bottom { position: fixed; right: 0px; left: 0px; z-index: 1030; border-radius: 0px; }
+    .container { padding-right: 15px; padding-left: 15px; margin-right: auto; margin-left: auto; width: 970px; }
+    .navbar-header { float: left; }
+    .container-fluid > .navbar-collapse, .container-fluid > .navbar-header, .container > .navbar-collapse, .container > .navbar-header { margin-right: 0px; margin-left: 0px; }
+    .container > .navbar-header, .container-fluid > .navbar-header, .container > .navbar-collapse, .container-fluid > .navbar-collapse { margin-right: 0px; margin-left: 0px; }
+    button, input, optgroup, select, textarea { margin: 0px; font-style: inherit; font-variant: inherit; font-weight: inherit; font-stretch: inherit; font-size: inherit; line-height: inherit; font-family: inherit; color: inherit; }
+    button { overflow: visible; }
+    button, select { text-transform: none; }
+    button, html input[type="button"], input[type="reset"], input[type="submit"] { -webkit-appearance: button; cursor: pointer; }
+    button, input, select, textarea { font-family: inherit; font-size: inherit; line-height: inherit; }
+    input, button, select, textarea { font-family: inherit; font-size: inherit; line-height: inherit; }
+    .navbar-toggle { position: relative; float: right; padding: 9px 10px; margin-top: 5.5px; margin-right: 15px; margin-bottom: 5.5px; border: 1px solid transparent; border-radius: 0px; background-image: none; background-color: transparent; display: none; }
+    .navbar-inverse .navbar-toggle { border-color: transparent; }
+    .sr-only { position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px 0px 0px 0px); border: 0px; }
+    .navbar-toggle .icon-bar { display: block; width: 22px; height: 2px; border-radius: 1px; }
+    .navbar-inverse .navbar-toggle .icon-bar { background-color: rgb(255, 255, 255); }
+    .navbar-toggle .icon-bar + .icon-bar { margin-top: 4px; }
+    img { border: 0px; vertical-align: middle; }
+    .collapse { display: none; }
+    .navbar-collapse { padding-right: 15px; padding-left: 15px; overflow-x: visible; border-top-width: 0px; border-top-style: solid; border-top-color: rgba(0, 0, 0, 0.2); box-shadow: none; width: auto; }
+    .navbar-collapse.collapse { padding-bottom: 0px; display: block !important; height: auto !important; overflow: visible !important; }
+    .navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse, .navbar-static-top .navbar-collapse { padding-right: 0px; padding-left: 0px; }
+    .navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse { max-height: 340px; }
+    .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form { border-color: rgb(0, 113, 150); }
+    .navbar-fixed-top .navbar-collapse, .navbar-static-top .navbar-collapse, .navbar-fixed-bottom .navbar-collapse { padding-left: 0px; padding-right: 0px; }
+    .navbar-fixed-top .navbar-collapse, .navbar-fixed-bottom .navbar-collapse { max-height: 340px; }
+    ol, ul { margin-top: 0px; margin-bottom: 10px; }
+    ul, ol { margin-top: 0px; margin-bottom: 10.5px; }
+    .nav { padding-left: 0px; margin-bottom: 0px; list-style: none; }
+    .navbar-nav { margin: 0px; float: left; }
+    .pull-right { float: right !important; }
+    .nav > li { position: relative; display: block; }
+    .navbar-nav > li { float: left; }
+    .nav > li > a { position: relative; display: block; padding: 10px 15px; }
+    .navbar-nav > li > a { padding-top: 12px; padding-bottom: 12px; line-height: 21px; }
+    .navbar-inverse .navbar-nav > li > a { color: rgb(255, 255, 255); }
+    .navbar .navbar-nav > li > a { line-height: 26px; background-color: rgb(153, 0, 0); }
+    .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:focus, .navbar-inverse .navbar-nav > .active > a:hover { color: rgb(255, 255, 255); background-color: rgb(8, 8, 8); }
+    .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus { color: rgb(255, 255, 255); background-color: rgb(0, 102, 135); }
+    .navbar .navbar-nav > li.active > a { background-color: rgb(115, 0, 0); }
+    .carousel { position: relative; border-radius: 20px; }
+    .carousel-indicators { position: absolute; bottom: 20px; left: 50%; z-index: 15; width: 60%; padding-left: 0px; margin-left: -30%; text-align: center; list-style: none; }
+    .carousel-indicators li { display: inline-block; width: 10px; height: 10px; margin: 1px; text-indent: -999px; cursor: pointer; border: 1px solid rgb(255, 255, 255); border-radius: 10px; background-color: rgba(0, 0, 0, 0); }
+    .carousel-indicators .active { width: 12px; height: 12px; margin: 0px; background-color: rgb(255, 255, 255); }
+    .carousel-inner { position: relative; width: 100%; overflow: hidden; }
+    .carousel-inner > .item { position: relative; display: none; transition: transform 0.6s ease-in-out; backface-visibility: hidden; perspective: 1000px; }
+    .carousel-inner > .active, .carousel-inner > .next, .carousel-inner > .prev { display: block; }
+    .carousel-inner > .active { left: 0px; }
+    .carousel-inner > .item.active, .carousel-inner > .item.next.left, .carousel-inner > .item.prev.right { left: 0px; transform: translate3d(0px, 0px, 0px); }
+    .carousel-inner > .item.next.left, .carousel-inner > .item.prev.right, .carousel-inner > .item.active { transform: translate3d(0px, 0px, 0px); left: 0px; }
+    .carousel img { border-radius: 20px; }
+    .carousel-inner > .item > a > img, .carousel-inner > .item > img, .img-responsive, .thumbnail a > img, .thumbnail > img { display: block; max-width: 100%; height: auto; }
+    .carousel-inner > .item > a > img, .carousel-inner > .item > img { line-height: 1; }
+    .img-responsive, .thumbnail > img, .thumbnail a > img, .carousel-inner > .item > img, .carousel-inner > .item > a > img { display: block; max-width: 100%; height: auto; }
+    .carousel-inner > .item > img, .carousel-inner > .item > a > img { line-height: 1; }
+    .carousel-caption { position: absolute; right: 20%; bottom: 20px; left: 20%; z-index: 10; padding-top: 20px; padding-bottom: 30px; color: rgb(255, 255, 255); text-align: center; text-shadow: rgba(0, 0, 0, 0.6) 0px 1px 2px; }
+    .carousel .carousel-caption { border-radius: 10px; padding-top: 10px; background: rgba(0, 0, 0, 0.4); }
+    .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 { font-family: inherit; font-weight: 500; line-height: 1.1; color: inherit; }
+    .h1, .h2, .h3, h1, h2, h3 { margin-top: 20px; margin-bottom: 10px; }
+    .h2, h2 { font-size: 30px; }
+    h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 { font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: 300; line-height: 1.1; color: inherit; }
+    h1, .h1, h2, .h2, h3, .h3 { margin-top: 21px; margin-bottom: 10.5px; }
+    h2, .h2 { font-size: 32px; }
+    .carousel h2 { margin-top: 0px; padding-top: 0px; margin-bottom: 0px; font-size: 30px; }
+    p { margin: 0px 0px 10.5px; }
+    .carousel .carousel-caption p { margin-left: 10px; margin-right: 10px; }
+    .btn { display: inline-block; padding: 8px 12px; margin-bottom: 0px; font-size: 15px; font-weight: normal; line-height: 1.4; text-align: center; white-space: nowrap; vertical-align: middle; touch-action: manipulation; cursor: pointer; -webkit-user-select: none; border: 1px solid transparent; border-radius: 0px; background-image: none; }
+    .btn-primary { color: rgb(255, 255, 255); border-color: rgb(0, 121, 161); background-color: rgb(0, 140, 186); }
+    .btn-group-lg > .btn, .btn-lg { padding: 10px 16px; font-size: 18px; line-height: 1.33333; border-radius: 6px; }
+    .btn-lg, .btn-group-lg > .btn { padding: 16px 20px; font-size: 19px; line-height: 1.33333; border-radius: 0px; }
+    .btn-lg { padding: 16px 20px; }
+    .carousel-caption .btn { text-shadow: none; }
+    [role="button"] { cursor: pointer; }
+    .carousel-control { position: absolute; top: 0px; bottom: 0px; left: 0px; width: 15%; font-size: 20px; color: rgb(255, 255, 255); text-align: center; text-shadow: rgba(0, 0, 0, 0.6) 0px 1px 2px; opacity: 0.5; }
+    .carousel-control.left { background-image: linear-gradient(to right, rgba(0, 0, 0, 0.498039) 0px, rgba(0, 0, 0, 0) 100%); background-repeat: repeat-x; }
+    .carousel .carousel-control { border-radius: 20px; }
+    .glyphicon { position: relative; top: 1px; display: inline-block; font-family: 'Glyphicons Halflings'; font-style: normal; font-weight: normal; line-height: 1; -webkit-font-smoothing: antialiased; }
+    .carousel-control .glyphicon-chevron-left, .carousel-control .glyphicon-chevron-right, .carousel-control .icon-next, .carousel-control .icon-prev { position: absolute; top: 50%; z-index: 5; display: inline-block; margin-top: -15px; width: 30px; height: 30px; font-size: 30px; }
+    .carousel-control .glyphicon-chevron-left, .carousel-control .icon-prev { left: 50%; margin-left: -15px; }
+    .carousel-control .icon-prev, .carousel-control .icon-next, .carousel-control .glyphicon-chevron-left, .carousel-control .glyphicon-chevron-right { position: absolute; top: 50%; margin-top: -10px; z-index: 5; display: inline-block; }
+    .carousel-control .icon-prev, .carousel-control .glyphicon-chevron-left { left: 50%; margin-left: -10px; }
+    .carousel-control .glyphicon-chevron-left, .carousel-control .glyphicon-chevron-right, .carousel-control .icon-prev, .carousel-control .icon-next { width: 30px; height: 30px; margin-top: -15px; font-size: 30px; }
+    .carousel-control.right { right: 0px; left: auto; background-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0px, rgba(0, 0, 0, 0.498039) 100%); background-repeat: repeat-x; }
+    .carousel-control .glyphicon-chevron-right, .carousel-control .icon-next { right: 50%; margin-right: -15px; }
+    .carousel-control .icon-next, .carousel-control .glyphicon-chevron-right { right: 50%; margin-right: -10px; }
+    h1 { margin: 0.67em 0px; font-size: 2em; }
+    .h1, h1 { font-size: 36px; }
+    h1, .h1 { font-size: 39px; }
+    .row { margin-right: -15px; margin-left: -15px; }
+    .home .productlist { margin-top: 50px; }
+    .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 { position: relative; min-height: 1px; padding-right: 15px; padding-left: 15px; }
+    .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9 { float: left; }
+    .col-sm-4 { width: 33.3333%; }
+    .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 { position: relative; min-height: 1px; padding-left: 15px; padding-right: 15px; }
+    .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 { float: left; }
+    .home .productlist > * { text-align: center; }
+    .home .productlist .product { margin-bottom: 25px; border-bottom-width: 2px; border-bottom-style: solid; border-bottom-color: rgb(204, 204, 204); padding-bottom: 10px; }
+    .home .productlist img { border-radius: 100px; box-shadow: rgb(0, 0, 0) 0px 0px 100px; }
+    .h3, h3 { font-size: 24px; }
+    h3, .h3 { font-size: 26px; }
+    .home .productlist .product p { height: 125px; }
+  </style>
 </head>
